[package]
authors = ["Sean McArthur <sean@seanmonstar.com>"] 
autotests = true 
categories = ["web-programming::http-client", "wasm"] 
description = "higher level HTTP client library" 
documentation = "https://docs.rs/nightfly" 
edition = "2018" 
keywords = ["http", "request", "client"] 
license = "MIT/Apache-2.0" 
name = "nightfly" 
readme = "README.md" 
repository = "https://github.com/seanmonstar/nightfly" 
version = "0.11.12" # remember to update html_root_url

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.playground]
features = [
  "cookies",
  "json",
  "multipart",
]

[features]
cookies = ["cookie_crate", "cookie_store", "proc-macro-hack"]

# gzip = ["gzip"]

# brotli = ["brotli"]

deflate = ["flate2"]

# json = ["serde_json"]

multipart = ["mime_guess"]

# trust-dns = ["trust-dns-resolver"]

[dependencies]
base64 = "0.13"
bytes = "1.0"
encoding_rs = "0.8.31"
http = "0.2"
http-body = "0.4.5"
httparse = "1.7.1"
ipnet = "2.5.0"
lunatic = {git = "https://github.com/lunatic-solutions/lunatic-rs"}
lunatic-log = "0.2"
mime = "0.3.16"
percent-encoding = "2.2.0"
serde = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0"
tower-service = "0.3"
url = "2.2"

# Optional deps...

## json
serde_json = "1.0"
## multipart
mime_guess = {version = "2.0", default-features = false, optional = true}
# Optional deps...

## cookies
cookie_crate = {version = "0.16", package = "cookie", optional = true}
cookie_store = {version = "0.16", optional = true}
proc-macro-hack = {version = "0.5.19", optional = true}

## compression
# brotli = {version = "^3.3.0", optional = true}
flate2 = {version = "^1.0.24", optional = true}
# gzip = {version = "^3.3.0", optional = true}

## trust-dns
trust-dns-resolver = {version = "0.22", optional = true}

[dev-dependencies]
criterion = {git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false}
submillisecond = {version = "0.2.0-beta0", features = [
  "cookies",
  "json",
  "logging",
  "query",
  "websocket",
]}# for examples

[[example]]
name = "blocking"
path = "examples/blocking.rs"

[[example]]
name = "json_dynamic"
path = "examples/json_dynamic.rs"
# required-features = ["json"]

[[example]]
name = "json_typed"
path = "examples/json_typed.rs"
# required-features = ["json"]

[[example]]
name = "tor_socks"
path = "examples/tor_socks.rs"
required-features = ["socks"]

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[test]]
name = "blocking"
path = "tests/blocking.rs"

[[test]]
name = "cookie"
path = "tests/cookie.rs"
required-features = ["cookies"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"
required-features = ["gzip"]

[[test]]
name = "brotli"
path = "tests/brotli.rs"
required-features = ["brotli"]

[[test]]
name = "deflate"
path = "tests/deflate.rs"
required-features = ["deflate"]

[[test]]
name = "multipart"
path = "tests/multipart.rs"
required-features = ["multipart"]
